# myprojectUV

./: .gitignore  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
