[project]
name = "myprojectUV"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "logging>=0.4.9.6",
    "myprojectuv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "colorlog>=6.8.2",
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.1",
    "sphinx>=8.0.2",
]

[tool.uv.sources]
myprojectuv = { workspace = true }


[tool.pytest.ini_options]
addopts = "--cov=myprojectUV"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true


