[project]
name = "myprojectUV"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "logging>=0.4.9.6",
    "myprojectuv",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
dev-dependencies = [
    "flake8==3.9.2",
    "tox==3.24.3",
    "pytest==6.2.5",
    "mypy==0.910",
    "colorlog>=6.8.2",
    "pre-commit>=3.8.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.9",
    "pytest-cov==2.12.1",
]


[tool.pytest.ini_options]
addopts = "--cov=myprojectUV"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
