[metadata]
name = myprojectUV
description = myprojectUV
author = Benjamin test
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    myproject
install_requires =
    requests>=2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8==3.9.2
    tox==3.24.3
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy===0.910


[options.package_data]
myproject = py.typed

[flake8]
max-line-length = 160